# ChangeLog for net-dialup/ppp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.192 2007/08/04 11:08:17 dertobi123 Exp $

  04 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> ppp-2.4.4-r9.ebuild:
  ppc stable, bug #184696

  28 Jul 2007; Christoph Mende <angelos@gentoo.org> ppp-2.4.4-r9.ebuild:
  Stable on amd64 wrt bug #184696

  23 Jul 2007; Joshua Kinard <kumba@gentoo.org> ppp-2.4.4-r9.ebuild:
  Stable on mips, per #184695.

  12 Jul 2007; Christian Faulhammer <opfer@gentoo.org> ppp-2.4.4-r9.ebuild:
  stable x86, bug 184696

  11 Jul 2007; Markus Rothe <corsair@gentoo.org> ppp-2.4.4-r9.ebuild:
  Stable on ppc64; bug #184696

  11 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> ppp-2.4.4-r9.ebuild:
  Stable on sparc wrt #184696

  10 Jul 2007; Raúl Porcel <armin76@gentoo.org> ppp-2.4.4-r9.ebuild:
  alpha/x86 stable wrt #184696

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org> ppp-2.4.4-r9.ebuild:
  Stable for HPPA (bug #184696).

*ppp-2.4.4-r9 (09 Jul 2007)

  09 Jul 2007; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r5.ebuild,
  -ppp-2.4.4-r8.ebuild, +ppp-2.4.4-r9.ebuild:
  Install pppd header files (#184545).

*ppp-2.4.4-r8 (14 Jun 2007)

  14 Jun 2007; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r7.ebuild,
  +ppp-2.4.4-r8.ebuild:
  Fix another grammar error (#180180).

*ppp-2.4.4-r7 (14 Jun 2007)

  14 Jun 2007; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r6.ebuild,
  +ppp-2.4.4-r7.ebuild:
  Correct auth-fail paragraphs of the pppd man page (#180180).

*ppp-2.4.4-r6 (09 Jun 2007)

  09 Jun 2007; Alin Năstac <mrness@gentoo.org> +ppp-2.4.4-r6.ebuild:
  Kill children instead process group when pppd is still attached to the
  controlling terminal (#181145). Add auth-fail script, thanks to Jaco Kroon
  <jaco at kroon dot co dot za> (#180180).

*ppp-2.4.4-r5 (28 May 2007)

  28 May 2007; Alin Năstac <mrness@gentoo.org> +ppp-2.4.4-r5.ebuild: