@@ -1,0 +1,9 @@
+MD5 a5d231ed708b19650ffb1574550045f4 ppp-2.4.4-patches-20070807.tar.gz 46431
+RMD160 3950cdaa5876d9dbae49cb1e968a2c5d3d8acb97 ppp-2.4.4-patches-20070807.tar.gz 46431
+SHA256 6e43b308aedca07a4c7589ca57bd32ad6cba0fd92b213cca0953c54c9cc112b7 ppp-2.4.4-patches-20070807.tar.gz 46431
+MD5 183800762e266132218b204dfb428d29 ppp-2.4.4.tar.gz 688763
+RMD160 ed289a4506c3af41a72f88103d5e0be44dec3da7 ppp-2.4.4.tar.gz 688763
+SHA256 58af45fc07e5f326eea2408df770ea40e4626d1a15e7d564dd054d74880e91ea ppp-2.4.4.tar.gz 688763
+MD5 9d2f3febf510c5b0cbb4dacba713a217 ppp-dhcpc.tgz 33497
+RMD160 63bf0d1cc52e91ea536fc593fb7a40502baecd90 ppp-dhcpc.tgz 33497
+SHA256 977fd980bb1d285963d8e27a87b7601ea84317faadfdb40989b258d1853db644 ppp-dhcpc.tgz 33497
